adding new custom type to datatable

--- a/force-app/main/default/lwc/vdt_datatable/vdt_progressBar.html
+++ b/force-app/main/default/lwc/vdt_datatable/vdt_progressBar.html
@@ -3,5 +3,6 @@
         record-id={value}
         actual-value={typeAttributes.actualValue}
         target-value={typeAttributes.targetValue}
+        kpi-type={typeAttributes.type}
     ></c-vdt_onekey-progress-bar>
 </template>
