--- a/force-app/main/default/lwc/vdt_enrichedText/vdt_enrichedText.html
+++ b/force-app/main/default/lwc/vdt_enrichedText/vdt_enrichedText.html
@@ -1,5 +1,5 @@
 <template>
-    <div title={tooltipMessage}>
+    <div title={tooltipMessage} class="slds-m-left_x-small">
         <span class="cellText">{textValue}</span>
     </div>
 </template>
