--- a/force-app/main/default/lwc/vdt_onekeyAnalysisSummary/vdt_onekeyAnalysisSummary.html
+++ b/force-app/main/default/lwc/vdt_onekeyAnalysisSummary/vdt_onekeyAnalysisSummary.html
@@ -13,7 +13,7 @@
                     </lightning-layout-item>
                 </lightning-layout>
             </lightning-layout-item>
-            <lightning-layout-item size="12" class="datatable">
+            <lightning-layout-item size="12" class="datatable big_header">
                 <c-vdt_datatable key-field="id"
                                   data={data} 
                                   columns={columns} 
