--- a/force-app/main/default/lwc/vdt_onekeyData/vdt_onekeyData.html
+++ b/force-app/main/default/lwc/vdt_onekeyData/vdt_onekeyData.html
@@ -7,7 +7,7 @@
                         <c-vdt_onekey-filters></c-vdt_onekey-filters>
                     </lightning-layout-item>                    
                     <lightning-layout-item>
-                        <lightning-button label="Calculate"></lightning-button>
+                        <button class="slds-button slds-button_neutral" style="width:150px; height: 50px;">Calculate</button>
                     </lightning-layout-item>
                 </lightning-layout>
             </lightning-layout-item>
