completed summary table behaviour

--- a/force-app/main/default/lwc/vdt_onekeyAnalysisDetails/vdt_onekeyAnalysisDetails.html
+++ b/force-app/main/default/lwc/vdt_onekeyAnalysisDetails/vdt_onekeyAnalysisDetails.html
@@ -33,7 +33,7 @@
             </lightning-layout-item>
             <lightning-layout-item size="12" class="datatable">
                 <lightning-datatable
-                    columns={gridColumns}
+                    columns={columns}
                     data={_data}
                     key-field="id"
                     hide-checkbox-column
