--- a/force-app/main/default/lwc/vdt_onekeyAnalysisSummary/vdt_onekeyAnalysisSummary.html
+++ b/force-app/main/default/lwc/vdt_onekeyAnalysisSummary/vdt_onekeyAnalysisSummary.html
@@ -15,7 +15,7 @@
             </lightning-layout-item>
             <lightning-layout-item size="12" class="datatable big_header">
                 <c-vdt_datatable key-field="id"
-                                  data={data} 
+                                  data={_calculationData} 
                                   columns={columns} 
                                   hide-checkbox-column>
                 </c-vdt_datatable>
