changes completed: detail table behaviour

--- a/force-app/main/default/lwc/vdt_onekeyAnalysisDetails/vdt_onekeyAnalysisDetails.html
+++ b/force-app/main/default/lwc/vdt_onekeyAnalysisDetails/vdt_onekeyAnalysisDetails.html
@@ -34,7 +34,7 @@
             <lightning-layout-item size="12" class="datatable">
                 <lightning-datatable
                     columns={columns}
-                    data={_data}
+                    data={_calculationData}
                     key-field="id"
                     hide-checkbox-column
                 ></lightning-datatable>
