ui changes: label button & target label on progress bar

--- a/force-app/main/default/lwc/vdt_onekeyFilters/vdt_onekeyFilters.html
+++ b/force-app/main/default/lwc/vdt_onekeyFilters/vdt_onekeyFilters.html
@@ -24,7 +24,7 @@
                 <lightning-button
                     variant="brand"
                     name="display-info"
-                    label='Display Information'
+                    label='Diagnose Usage'
                     onclick={handleDisplayInfoClick}
                     disabled={disabled}
                 ></lightning-button>
