--- a/force-app/main/default/lwc/vdt_onekeyCountryInput/vdt_onekeyCountryInput.html
+++ b/force-app/main/default/lwc/vdt_onekeyCountryInput/vdt_onekeyCountryInput.html
@@ -1,15 +1,36 @@
 <template>
     <lightning-layout>
-        <lightning-layout-item size="12">
-            <p class="input-label">Country</p>
-            <c-vdt_autocomplete-input
-                multiselect
-                placeholder="Select Country"
-                class="validate"
-                options={_countryCodeOptions}
-                onoptionselect={handleCountryOptionSelect}
-                disabled={disabled}
-            ></c-vdt_autocomplete-input>
+        <lightning-layout-item size="12" class="country-field">
+                <template if:false={loadCompleted}>
+                    <lightning-spinner alternative-text="Loading" size="small"></lightning-spinner>
+                </template>
+                <lightning-layout>
+                    <lightning-layout-item size="1">
+                        <lightning-helptext content={textHelp}></lightning-helptext>
+                    </lightning-layout-item>
+                    <lightning-layout-item size="11">
+                        <p class="input-label">Country</p>
+                    </lightning-layout-item>
+                </lightning-layout>
+                <template if:true={isPicklistField}>
+                    <c-vdt_autocomplete-input
+                        multiselect
+                        placeholder="Select Country"
+                        class="validate"
+                        options={_countryCodeOptions}
+                        onoptionselect={handleCountryOptionSelect}
+                        disabled={disabled}
+                    ></c-vdt_autocomplete-input>
+                </template>
+                <template if:true={isTextField}>
+                    <lightning-input 
+                        type="text" 
+                        onchange={handleCountryTextChange} 
+                        placeholder="Type Country Name" 
+                        variant="label-hidden"
+                        autocomplete="off"
+                    ></lightning-input>
+                </template>
         </lightning-layout-item>
     </lightning-layout>
 </template>
