adding calculations for summary kpis

--- a/force-app/main/default/lwc/vdt_onekeyData/vdt_onekeyData.html
+++ b/force-app/main/default/lwc/vdt_onekeyData/vdt_onekeyData.html
@@ -34,7 +34,7 @@
                     </lightning-layout-item>
                     <lightning-layout-item size="12" class="graphs">
                         <lightning-layout multiple-rows>
-                            <c-vdt_onekey-analysis-details countries={countries} calculation-data={_calculation.detailData}></c-vdt_onekey-analysis-details>
+                            <c-vdt_onekey-analysis-details countries={countries} calculation-data={_calculation.data}></c-vdt_onekey-analysis-details>
                         </lightning-layout>
                     </lightning-layout-item>
                 </template>
