adding latest changes from dev org

--- a/force-app/main/default/lwc/vdt_app/vdt_app.html
+++ b/force-app/main/default/lwc/vdt_app/vdt_app.html
@@ -2,7 +2,7 @@
     <div class="container">
         <lightning-card>
             <div slot="title">
-                <div class="header-text">Veeva Diagnostic Tool</div>
+                <c-vdt_app-header></c-vdt_app-header>
             </div>
             <div slot="actions">
                 <c-vdt_profile-icon></c-vdt_profile-icon>
