--- a/force-app/main/default/lwc/vdt_productsAndHierarchy/vdt_productsAndHierarchy.html
+++ b/force-app/main/default/lwc/vdt_productsAndHierarchy/vdt_productsAndHierarchy.html
@@ -9,44 +9,11 @@
                 onoptionselect={handleCountryChange}
             ></c-vdt_autocomplete-input>
         </lightning-layout-item>
-        <lightning-layout-item size="4" padding="horizontal-small">
-            <c-vdt_autocomplete-input
-                multiselect
-                label="Product Type"
-                placeholder="Select Product Types"
-                options={_productTypes}
-                onoptionselect={handleProductTypeChange}
-            ></c-vdt_autocomplete-input>                       
-        </lightning-layout-item>
     </lightning-layout>
     <div class="slds-m-top_medium slds-m-bottom_x-large">
-            <lightning-accordion class="example-accordion" allow-multiple-sections-open>
-                <lightning-accordion-section name="product_hierarchy" label="Product Hierarchy">
-                    <lightning-tree items={treeData}></lightning-tree>
-                </lightning-accordion-section>
-            </lightning-accordion>
+        <c-vdt_product-adoption-tree></c-vdt_product-adoption-tree>
     </div>
-    <lightning-accordion class="example-accordion" allow-multiple-sections-open>
-        <lightning-accordion-section name="product_table" label="Product Adoption Analysis">
-            <lightning-layout multiple-rows>
-                <lightning-layout-item size="4">
-                    <p class="bold-text">Apply date range on transactional records</p>
-                    <c-vdt_date-range-picker
-                        class="validate range-picker"
-                        onrangechange={handleDateRangeChange}
-                        disabled={disabled}></c-vdt_date-range-picker>  
-                </lightning-layout-item>
-            </lightning-layout> 
-            <lightning-layout multiple-rows>
-                <lightning-layout-item size="12" class="datatable">
-                    <lightning-datatable
-                        key-field="id"
-                        data={data}
-                        columns={columns}
-                        hide-checkbox-column>
-                    </lightning-datatable>  
-                </lightning-layout-item>
-            </lightning-layout>
-        </lightning-accordion-section>
-    </lightning-accordion>
+    <div class="slds-m-top_medium">
+        <c-vdt_product-adoption-analysis></c-vdt_product-adoption-analysis>
+    </div>
 </template>
