new changes added. batch control hit limit

--- a/force-app/main/default/lwc/vdt_calculationLogs/vdt_calculationLogs.html
+++ b/force-app/main/default/lwc/vdt_calculationLogs/vdt_calculationLogs.html
@@ -34,6 +34,9 @@
                                     key-field="id"
                                     data={_filteredLogs}
                                     columns={_columns}
+                                    onsort={updateColumnSorting}
+                                    sorted-direction={_sortDirection}
+                                    sorted-by={_sortedBy}
                                     hide-checkbox-column
                                 ></lightning-datatable>
                             </div>
