using publish/subscribe methods to update table based on country selection

--- a/force-app/main/default/lwc/vdt_productsAndHierarchy/vdt_productsAndHierarchy.html
+++ b/force-app/main/default/lwc/vdt_productsAndHierarchy/vdt_productsAndHierarchy.html
@@ -5,7 +5,7 @@
                 multiselect
                 label="Country"
                 placeholder="Select Countries"
-                options={_countries}
+                options={_countryOptions}
                 onoptionselect={handleCountryChange}
             ></c-vdt_autocomplete-input>
         </lightning-layout-item>
