tree lwc development completed.

--- a/force-app/main/default/lwc/vdt_productAdoptionTree/vdt_productAdoptionTree.html
+++ b/force-app/main/default/lwc/vdt_productAdoptionTree/vdt_productAdoptionTree.html
@@ -7,7 +7,7 @@
                         multiselect
                         label="Product Type"
                         placeholder="Select Product Types"
-                        options={_productTypes}
+                        options={_productTypeOptions}
                         onoptionselect={handleProductTypeChange}
                     ></c-vdt_autocomplete-input>
                 </lightning-layout-item>
