--- a/force-app/main/default/lwc/vdt_productsAndHierarchy/vdt_productsAndHierarchy.html
+++ b/force-app/main/default/lwc/vdt_productsAndHierarchy/vdt_productsAndHierarchy.html
@@ -14,6 +14,6 @@
         <c-vdt_product-adoption-tree></c-vdt_product-adoption-tree>
     </div>
     <div class="slds-m-top_medium">
-        <c-vdt_product-adoption-analysis></c-vdt_product-adoption-analysis>
+        <c-vdt_product-adoption-analysis international-country={internationalCountry.data}></c-vdt_product-adoption-analysis>
     </div>
 </template>
