--- a/force-app/main/default/lwc/vdt_fieldDetailLevelSummary/vdt_fieldDetailLevelSummary.html
+++ b/force-app/main/default/lwc/vdt_fieldDetailLevelSummary/vdt_fieldDetailLevelSummary.html
@@ -37,6 +37,7 @@
                     data={_currentPageData}
                     columns={_columns}
                     hide-checkbox-column
+                    onrowaction={handleRowAction}
                 ></lightning-datatable>
             </lightning-layout-item>
             <lightning-layout-item size="12" class="paginator">
