--- a/force-app/main/default/lwc/vdt_productAdoptionTable/vdt_productAdoptionTable.html
+++ b/force-app/main/default/lwc/vdt_productAdoptionTable/vdt_productAdoptionTable.html
@@ -25,10 +25,19 @@
             <lightning-layout-item size="12" class="datatable">
                 <lightning-datatable
                     columns={columns}
-                    data={_calculationData}
+                    data={_currentPageData}
                     key-field="id"
                     hide-checkbox-column
                 ></lightning-datatable>
+            </lightning-layout-item>
+            <lightning-layout-item size="12" class="paginator">
+                <c-vdt_paginator
+                    page-numbers={_pageNumbers}
+                    current-page={_currentPage}
+                    onprevious={handlePreviousClick}
+                    onpageclick={handlePageClick}
+                    onnext={handleNextClick}
+                ></c-vdt_paginator>
             </lightning-layout-item>
         </lightning-layout>
     </div>
