field values occurrences

--- a/force-app/main/default/lwc/vdt_calculationButton/vdt_calculationButton.html
+++ b/force-app/main/default/lwc/vdt_calculationButton/vdt_calculationButton.html
@@ -13,7 +13,7 @@
                 <lightning-button
                     variant="neutral"
                     name="recalculate"
-                    label={_buttonLabel}
+                    label={buttonLabel}
                     onclick={handleButtonClick}
                     disabled={_buttonDisabled}
                 ></lightning-button>
